# scannerDeOpcoes

./: README.md  carteira.py  data.json  main.py  metas.json  opcoesCALL.xlsx  opcoesPUT.xlsx  opcoesTestCall.ipynb  opcoesTestPut.ipynb  pyproject.toml  scanner.py  test.ipynb
.ipynb_checkpoints/: opcoesTestCall-checkpoint.ipynb  opcoesTestPut-checkpoint.ipynb  test2-checkpoint.ipynb
