[project]
name = "scannerdeopcoes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "yfinance>=1.0",
]
